--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,6 @@ on:
 
 env:
   GO_VERSION: 1.18.2
-  REMOVE_PKG: mock_*|tester|proto|cmd|api
 
 jobs:
   build:
@@ -24,18 +23,8 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
 
-      - name: Remove no test pkg
-        id: pkg
-        run: |
-          export cmd=$(echo "mock_*|tester|proto|cmd|api" | awk -F '|' '{for (i=1;i<NF;i++) print $i}' \
-          | sed "s/^/\'/" | sed "s/$/\'/" | sed 's/^/grep -v /' | sed 's/^/|/' | tr -d '\n' | sed 's/^/go list .\/.../') || exit 1
-          export pkgs=$(eval "$cmd") || exit 1
-          echo "pkgs=$pkgs" >> $GITHUB_OUTPUT || exit 1
-
       - name: Run unittest
-        run: |
-          go test -short -coverprofile cover.out -covermode=atomic ${{ steps.pkg.outputs.pkgs }} || exit 1
-          cat cover.out | grep -v "pb.go" >> coverage.txt || exit 1
+        run: make unitest
 
       - name: Upload Coverage report to CodeCov
         uses: codecov/codecov-action@v3
