--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Start application in background
-        run: |
-          echo "start application in background"
+        run: echo "start application in background"
 
       - name: Run smoke test
-        run: |
-          echo "run smoke test"
+        run: echo "run smoke test"
 
       # other test
