--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: build
+name: Build
 
 on:
   pull_request:
@@ -8,23 +8,24 @@ on:
 
 env:
   GO_VERSION: 1.18.2
+  BUILD_PATH: "./"
 
 jobs:
-  build:
+  build-job:
     name: Build project after unittest and golangci-lint
     runs-on: ubuntu-20.04
 
     steps:
-      - name: Set up Go${{ env.GO_VERSION }}
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3
+
+      - name: Set sup Go${{ env.GO_VERSION }}
         uses: actions/setup-go@v4
         with:
           go-version: ${{ env.GO_VERSION }}
 
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
-
       - name: Run unittest
-        run: make unitest
+        run: make unittest
 
       - name: Upload Coverage report to CodeCov
         uses: codecov/codecov-action@v3
