--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-name: cd
+name: CD
 
 
 # trigger on merged pull requests or push to master branch
@@ -11,7 +11,7 @@ on:
       - master
 
 jobs:
-  cd:
+  cd-job:
     if: github.event.pull_request.merged == true
     name: Continuous Deployment
     runs-on: ubuntu-latest
