--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,32 @@
-name: ci
+name: CI
 
 on:
-  pull_request:
-    branches:
-      - master
-      - release*
+  workflow_run:
+    workflows:
+      - Build
+    types:
+      - completed
 
 env:
   GO_VERSION: 1.18.2
 
 jobs:
-  ci:
-    needs: build
+  ci-job:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     name: Continuous integration
     runs-on: ubuntu-latest
 
     steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3
+
       - name: Set up Go${{ env.GO_VERSION }}
         uses: actions/setup-go@v4
         with:
           go-version: ${{ env.GO_VERSION }}
-
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
 
       - name: Start application in background
         run: echo "start application in background"
 
       - name: Run smoke test
         run: echo "run smoke test"
-
-      # other test
