--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,50 @@
 name: CI
 
 on:
-  workflow_run:
-    workflows:
-      - Build
-    types:
-      - completed
+  pull_request:
+    branches:
+      - master
+      - release*
 
 env:
   GO_VERSION: 1.18.2
+  BUILD_PATH: "./"
 
 jobs:
+  build-job:
+    name: Build project after unittest and golangci-lint
+    runs-on: ubuntu-20.04
+
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3
+
+      - name: Set sup Go${{ env.GO_VERSION }}
+        uses: actions/setup-go@v4
+        with:
+          go-version: ${{ env.GO_VERSION }}
+
+      - name: Run unittest
+        run: make unittest
+
+      - name: Upload Coverage report to CodeCov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage.txt
+
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: v1.50.1
+          args: --timeout=5m
+          only-new-issues: true
+
+      - name: Go Build Project
+        run: go build -v ${{ env.BUILD_PATH }}
+
   ci-job:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    name: Continuous integration
+    needs: build-job
+    name: Smoke test
     runs-on: ubuntu-latest
 
     steps:
